--- a/frontend/src/components/UI/indexUI.scss
+++ b/frontend/src/components/UI/indexUI.scss
@@ -10,3 +10,4 @@
 @import './Cursor/Cursor.scss';
 @import './Buttons/buttons.scss';
 @import './Cart/Cart.scss';
+@import './Quantity/Quantity.scss';
