start with redux

--- a/frontend/src/components/pages/ProductScreen/ProductScreen.scss
+++ b/frontend/src/components/pages/ProductScreen/ProductScreen.scss
@@ -4,6 +4,7 @@
   background: $rootStyleTypeBg;
   & > .container {
     padding-top: 100px;
+    padding-bottom: 50px;
     & > .SunLogo {
       display: none;
     }
