Why i start Shop ?...

--- a/frontend/src/components/UI/indexUI.scss
+++ b/frontend/src/components/UI/indexUI.scss
@@ -11,3 +11,4 @@
 @import './Buttons/buttons.scss';
 @import './Cart/Cart.scss';
 @import './Quantity/Quantity.scss';
+@import './Loader/Loader.scss';
