--- a/frontend/src/components/UI/Cursor/Cursor.scss
+++ b/frontend/src/components/UI/Cursor/Cursor.scss
@@ -1,26 +1,19 @@
 .Cursor {
-  width: 40px;
-  height: 40px;
-  border: 1px solid #fff;
-  border-radius: 100%;
+  z-index: 99;
   position: fixed;
-  transform: translate(-50%, -50%);
   pointer-events: none;
-  z-index: 9999;
-  mix-blend-mode: difference;
-  transition: all 150ms ease;
-  transition-property: opacity;
-  transition-property:  opacity, background-color, transform, mix-blend-mode;
-  &.hiden {
-    opacity: 0;
+  border-radius: 50%;
+  transition: opacity 0.15s ease-in-out, transform 0.15s ease-in-out;
+  background: #fff;
+  &.inner {
+    background: $rootStyleTypeColor;
+    z-index: 100;
+    width: 10px;
+    height: 10px;
   }
-
-  &.clicked {
-    transform: translate(-50%, -50%) scale(0.9);
-    background-color:  #fff;
-  }
-  &.link-hovered {
-    transform: translate(-50%, -50%) scale(1.25);
-    background-color: #fff;
+  &.outer {
+    width: 30px;
+    height: 30px;
+    mix-blend-mode: difference;
   }
 }
