--- a/frontend/src/components/UI/Loader/Loader.scss
+++ b/frontend/src/components/UI/Loader/Loader.scss
@@ -1,11 +1,8 @@
 .Loader {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 1000;
-  background: rootStyleTypeBg;
-  @include flex(center, center);
-
+  width: 100%;
+  height: 100%;
+  background: $rootStyleTypeBg;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
