--- a/frontend/src/components/UI/Loader/Loader.scss
+++ b/frontend/src/components/UI/Loader/Loader.scss
@@ -1,8 +1,10 @@
 .Loader {
-  width: 100%;
-  height: 100%;
-  background: $rootStyleTypeBg;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 10000;
+  @include flex(center, center);
+  background: white;
 }
