--- a/frontend/src/components/pages/pages.scss
+++ b/frontend/src/components/pages/pages.scss
@@ -3,3 +3,4 @@
 @import './Contact/Contact.scss';
 @import './Shop/Shop.scss';
 @import './ProductScreen/ProductScreen.scss';
+@import './Error/Error.scss';
