--- a/frontend/src/components/UI/Cursor/Cursor.scss
+++ b/frontend/src/components/UI/Cursor/Cursor.scss
@@ -6,7 +6,7 @@
   transition: opacity 0.15s ease-in-out, transform 0.15s ease-in-out;
   background: #fff;
   &.inner {
-    background: $rootStyleTypeColor;
+    mix-blend-mode: difference;
     z-index: 100;
     width: 10px;
     height: 10px;
