--- a/frontend/src/components/UI/Loader/Loader.scss
+++ b/frontend/src/components/UI/Loader/Loader.scss
@@ -5,6 +5,91 @@
   right: 0;
   bottom: 0;
   z-index: 10000;
+  padding: 20px;
+  text-align: center;
   @include flex(center, center);
-  background: white;
+  flex-direction: column;
+  background: $rootStyleTypeBg;
+  & > .SunLogo {
+    & > svg {
+      animation: spin 5s linear infinite;
+    }
+  }
+  &-title {
+    width: 100%;
+    margin-top: 20px;
+    color: $rootStyleTypeColor;
+    font-size: 100px;
+    font-family: $main-font-light;
+    font-weight: 100;
+    letter-spacing: 20px;
+  }
+  & > p {
+    margin-top: 40px;
+    font-size: 30px;
+    color: $rootStyleTypeColor;
+    font-family: $main-font-light-italic;
+  }
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+@media screen and(max-width: $breakpoint-lg) {
+  .Loader {
+    &-title {
+      font-size: 80px;
+    }
+  }
+}
+
+@media screen and(max-width: $breakpoint-md) {
+  .Loader {
+    &-title {
+      font-size: 50px;
+    }
+    & > p {
+      font-size: 25px;
+    }
+  }
+}
+
+@media screen and(max-width: $breakpoint-sm) {
+  .Loader {
+    &-title {
+      letter-spacing: 5px;
+      font-size: 25px;
+    }
+    & > p {
+      font-size: 20px;
+    }
+  }
+}
+
+.Loader.load {
+  transition: opacity 1s;
+  &-enter {
+    opacity: 0;
+  }
+  &-enter-active {
+    opacity: 0.5;
+  }
+  &-enter-done {
+    opacity: 1;
+  }
+  &-exit {
+    opacity: 0.75;
+  }
+  &-exit-active {
+    opacity: 0;
+  }
+  &-exit-done {
+    opacity: 0;
+  }
 }
