--- a/frontend/src/components/UI/Buttons/buttons.scss
+++ b/frontend/src/components/UI/Buttons/buttons.scss
@@ -1,3 +1,4 @@
 @import './RectangleBtn/RectangleBtn.scss';
 @import './CircleBtn/CircleBtn.scss';
 @import './LikeBtn/LikeBtn.scss';
+@import './CartButton/CartButton.scss';
