--- a/frontend/src/components/pages/pages.scss
+++ b/frontend/src/components/pages/pages.scss
@@ -4,3 +4,4 @@
 @import './Shop/Shop.scss';
 @import './ProductScreen/ProductScreen.scss';
 @import './Message/Message.scss';
+@import './Cart/Cart.scss';
