--- a/frontend/src/components/UI/Buttons/buttons.scss
+++ b/frontend/src/components/UI/Buttons/buttons.scss
@@ -2,3 +2,4 @@
 @import './CircleBtn/CircleBtn.scss';
 @import './LikeBtn/LikeBtn.scss';
 @import './CartButton/CartButton.scss';
+@import './RemoveBtn/RemoveBtn.scss';
