--- a/frontend/src/components/pages/Cart/Cart.scss
+++ b/frontend/src/components/pages/Cart/Cart.scss
@@ -5,22 +5,23 @@
   right: 0;
   bottom: 0;
   background: rgba($main-dark-color, 0.5);
-  z-index: 10;
+  z-index: 2;
+
   &-box {
     float: right;
     max-width: 60%;
     width: 100%;
     height: 100%;
-    background: $main-dark-color;
+    background: $rootStyleTypeBg;
     padding: 30px;
     @include flex(flex-start, center);
     flex-direction: column;
     &-header {
       width: 100%;
-      border-bottom: 1px solid $main-light-color;
+      border-bottom: 1px solid $rootStyleTypeColor;
       @include flex(center, space-between);
       & > h5 {
-        color: $main-light-color;
+        color: $rootStyleTypeColor;
         font-family: $main-font-light;
         font-weight: 100;
         font-size: 50px;
@@ -29,7 +30,7 @@
         & > span {
           margin-left: 10px;
           font-family: $main-font-light;
-          color: $main-font-light;
+          color: $rootStyleTypeColor;
           font-size: 20px;
         }
       }
@@ -59,7 +60,7 @@
           display: block;
           width: 100%;
           height: 2px;
-          background: $main-light-color;
+          background: $rootStyleTypeColor;
           &:first-child {
             transform: translate(-50%, -50%) rotate(50deg);
           }
@@ -80,7 +81,7 @@
       @include flex(center,center);
       &-to-shopping > a {
         text-decoration: none;
-        color: $main-light-color;
+        color: $rootStyleTypeColor;
         font-family: $main-font-light;
         font-size: 24px;
         letter-spacing: 2px;
@@ -94,19 +95,19 @@
         padding: 0 25px;
         width: 100%;
         &-subtotal {
-          padding: 10px 0;
+          padding: 20px 0;
           @include flex(center, space-between);
           & > h5 {
             font-family: $main-font-light;
             font-size: 25px;
             font-weight: 400;
-            color: $main-light-color;
+            color: $rootStyleTypeColor;
           }
           & > h6 {
             font-family: $main-font-regular;
             letter-spacing: 2px;
             font-size: 40px;
-            color: $main-light-color;
+            color: $rootStyleTypeColor;
           } 
         }
       }
