--- a/frontend/src/components/pages/Cart/CartItem/CartItem.scss
+++ b/frontend/src/components/pages/Cart/CartItem/CartItem.scss
@@ -4,41 +4,48 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
   grid-gap: 40px;
+  border-bottom: 1px solid $rootStyleTypeColor;
 
   &-image {
     width: 100%;
     max-height: 250px;
     height: 100%;
     overflow: hidden;
+
     & > img {
       width: 100%;
       height: 100%;
       object-fit: cover;
     }
   }
+
   &-info {
     padding: 10px 0;
     @include flex(flex-start, center);
     flex-direction: column;
+
     & > h5 {
       font-family: $main-font-light;
       letter-spacing: 2px;
       font-weight: 100;
-      color: $main-light-color;
+      color: $rootStyleTypeColor;
       font-size: 16px;
     }
+
     &-name {
       flex: 1;
       margin-top: 10px;
-      @include flex(center,center);
+      @include flex(center, center);
+
       & > h4 {
         font-family: $main-font-regular;
         font-weight: 400;
         letter-spacing: 3px;
-        color: $main-light-color;
+        color: $rootStyleTypeColor;
         font-size: 30px;
       }
     }
+
     &-descAndLikes {
       @include flex(center, space-between);
       width: 100%;
@@ -46,14 +53,45 @@
       & > div {
         @include flex(center, center);
         flex-direction: column;
-        color: $main-light-color;
+        color: $rootStyleTypeColor;
         font-family: $main-font-light;
+
         & > p.title {
-          color: rgba(255, 255, 255, 0.6);
+          color: $rootStyleTypeColor;
         }
+
         & > p {
-          color: $main-light-color;
+          margin-top: 5px;
+          color: $rootStyleTypeColor;
           font-size: 16px;
+        }
+      }
+    }
+  }
+
+  &-qntDelAndPrice {
+    width: 100%;
+    @include flex(center, space-between);
+    flex-direction: column;
+
+    &-qntDel {
+      @include flex(center, space-around);
+      padding: 10px;
+
+      & > .RemoveBtn {
+        margin-left: 10px;
+      }
+    }
+
+    &-price {
+      & > h5 {
+        color: $rootStyleTypeColor;
+        font-family: $main-font-medium;
+        letter-spacing: 2px;
+        font-size: 40px;
+
+        & > span {
+          font-size: 30px;
         }
       }
     }
