--- a/frontend/src/components/pages/pages.scss
+++ b/frontend/src/components/pages/pages.scss
@@ -5,3 +5,4 @@
 @import './ProductScreen/ProductScreen.scss';
 @import './Message/Message.scss';
 @import './Cart/Cart.scss';
+@import './Checkout/Checkout.scss';
