--- a/frontend/src/components/pages/Cart/CartItem/CartItem.scss
+++ b/frontend/src/components/pages/Cart/CartItem/CartItem.scss
@@ -2,8 +2,8 @@
   width: 100%;
   padding: 30px 0;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-  grid-gap: 40px;
+  grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
+  grid-gap: 20px;
   border-bottom: 1px solid $rootStyleTypeColor;
 
   &-image {
@@ -15,11 +15,13 @@
     & > img {
       width: 100%;
       height: 100%;
+      max-height: 400px;
       object-fit: cover;
     }
   }
 
   &-info {
+    width: 100%;
     padding: 10px 0;
     @include flex(flex-start, center);
     flex-direction: column;
@@ -42,7 +44,7 @@
         font-weight: 400;
         letter-spacing: 3px;
         color: $rootStyleTypeColor;
-        font-size: 30px;
+        font-size: 35px;
       }
     }
 
@@ -70,6 +72,8 @@
   }
 
   &-qntDelAndPrice {
+    align-self: center;
+    justify-self: center;
     width: 100%;
     @include flex(center, space-between);
     flex-direction: column;
@@ -97,3 +101,53 @@
     }
   }
 }
+
+@media screen and(max-width: $breakpoint-md) {
+  .CartItem {
+    @include flex(center, center);
+    flex-wrap: wrap;
+    padding: 20px;
+    &-image {
+      max-width: 400px;
+      max-height: 400px;
+      & > img {
+        object-fit: fill;
+      }
+    }
+    &-info {
+      & > h5 {
+        font-size: 14px;
+      }
+      &-name {
+        padding: 20px 0;
+        & > h4 {
+          font-size: 30px;
+        }
+      }
+    }
+    &-qntDelAndPrice {
+      flex-direction: row;
+      &-price {
+        & > h5 {
+          font-size: 30px;
+        }
+
+        & > span {
+          font-size: 20px;
+        }
+      }
+    }
+  }
+}
+
+@media screen and(max-width: $breakpoint-sm) {
+  .CartItem {
+    padding: 10px 5px;
+    &-image {
+      max-width: 500px;
+      & > img {
+        max-width: 500px;
+      }
+    }
+  }
+} 
