--- a/frontend/src/components/UI/Layout/Navigation/LoginLink/LoginLink.scss
+++ b/frontend/src/components/UI/Layout/Navigation/LoginLink/LoginLink.scss
@@ -4,6 +4,7 @@
   height: 100%;
   flex: 1;
   padding: 0 10px;
+  min-width: 90px;
   &-box {
     @include flex(center, center);
     flex-direction: column;
@@ -13,11 +14,10 @@
       font-family: $main-font-regular;
       font-size: 20px;
 
-      &:hover ~ .LoginLink-box-line{
+      &:hover ~ .LoginLink-box-line {
         width: 100%;
         background: $rootStyleTypeColor;
       }
-
     }
     &-line {
       margin-top: 5px;
@@ -29,25 +29,32 @@
   }
 }
 
-@media screen and (max-width: $breakpoint-lg ) {
+@media screen and (max-width: $breakpoint-lg) {
   .LoginLink-box {
-    &> a {
+    & > a {
       font-size: 18px;
     }
   }
 }
 
-@media screen and (max-width: $breakpoint-md ) {
+@media screen and (max-width: $breakpoint-md) {
   .LoginLink-box {
-    &> a {
+    & > a {
       font-size: 16px;
     }
   }
 }
-@media screen and (max-width: $breakpoint-sm ) {
-  .LoginLink-box {
-    &-line {
-      display: none;
+@media screen and (max-width: $breakpoint-sm) {
+  .LoginLink {
+    height: 40px;
+    flex: 1;
+    z-index: 1;
+    border-left: 1px solid $rootStyleTypeColor;
+    border-bottom: 1px solid $rootStyleTypeColor;
+    &-box {
+      &-line {
+        display: none;
+      }
     }
   }
 }
