--- a/frontend/src/components/UI/Layout/Navigation/MenuLogo/MenuLogo.scss
+++ b/frontend/src/components/UI/Layout/Navigation/MenuLogo/MenuLogo.scss
@@ -30,10 +30,12 @@
 
 @media screen and (max-width: $breakpoint-sm) {
   .MenuLogo {
-    flex: 3;
-    padding: 0 5px;
-    border-right: 1px solid $rootStyleTypeColor;
+    min-width: 100%;
+    height: 40px;
+    border: 1px solid $rootStyleTypeColor;
+    z-index: 10;
     & > a {
+      border: none;
       color: $rootStyleTypeColor;
       font-size: 16px;
     }
