--- a/frontend/src/components/UI/Layout/Navigation/Navigation.scss
+++ b/frontend/src/components/UI/Layout/Navigation/Navigation.scss
@@ -32,10 +32,13 @@
 
 @media screen and (max-width: $breakpoint-sm) {
   .Navigation {
-    padding: 10px;
+    padding: 5px;
 
     &-box {
-      height: 40px;
+      height: auto;
+      @include flex(center, center);
+      border: none;
+      flex-wrap: wrap;
 
       &::before {
         content: "";
@@ -44,16 +47,22 @@
         left: 0;
         height: 100%;
         width: 100%;
-        border: 1px solid $rootStyleTypeColor;
+        background: $rootStyleTypeBg;
       }
 
       &-loginCartLinkBox {
         max-width: 100%;
+        width: 100%;
         flex: 2;
       }
 
       &-menuBtn {
-        height: 100%;
+        flex: 1;
+        width: 100%;
+        height: 40px;
+        border-bottom: 1px solid $rootStyleTypeColor;
+        border-right: 1px solid $rootStyleTypeColor;
+        border-left: 1px solid $rootStyleTypeColor;
         @include flex(center, center);
 
         &-toggle {
@@ -113,7 +122,10 @@
   }
 }
 
+
+
 @import "./Menu/Menu.scss";
 @import "./MenuLogo/MenuLogo.scss";
 @import "./Menu/MenuLink/MenuLink.scss";
 @import './LoginLink/LoginLink.scss';
+@import './CartButton/CartButton.scss';
