--- a/frontend/src/components/UI/indexUI.scss
+++ b/frontend/src/components/UI/indexUI.scss
@@ -10,3 +10,4 @@
 @import './Buttons/buttons.scss';
 @import './Quantity/Quantity.scss';
 @import './Loader/Loader.scss';
+@import './InputControl/InputControl.scss'
