start with contact page

--- a/frontend/src/components/UI/indexUI.scss
+++ b/frontend/src/components/UI/indexUI.scss
@@ -10,4 +10,5 @@
 @import './Buttons/buttons.scss';
 @import './Quantity/Quantity.scss';
 @import './Loader/Loader.scss';
-@import './InputControl/InputControl.scss'
+@import './InputControl/InputControl.scss';
+@import './TextPageIntro/TextPageIntro.scss';
