--- a/frontend/src/components/pages/Home/Description/Description.scss
+++ b/frontend/src/components/pages/Home/Description/Description.scss
@@ -61,6 +61,7 @@
       border: 1px solid $main-light-color;
       max-height: 200px;
       max-width: 300px;
+      object-fit: cover;
       transform: rotate(-5deg);
       -webkit-box-shadow: 2px 50px 74px 44px rgba(169, 140, 127, 0.14);
       -moz-box-shadow: 2px 50px 74px 44px rgba(169, 140, 127, 0.14);
