--- a/frontend/src/style/index.scss
+++ b/frontend/src/style/index.scss
@@ -5,6 +5,7 @@
 @import "./utility.scss";
 @import "../components/UI/indexUI.scss";
 @import "../components/pages/pages.scss";
+@import '../components/formik/FormikControl.scss';
 
 // Basic style
 
