--- a/frontend/src/style/variables.scss
+++ b/frontend/src/style/variables.scss
@@ -10,7 +10,7 @@ $main-dark-color: #181818;
 $main-color: #a98c7f;
 
 // Breakpoint
-
+$maxWidth: 1200;
 $breakpoint-xlg: 1400px;
 $breakpoint-lg: 1200px;
 $breakpoint-md: 1024px;
