--- a/frontend/src/components/UI/Buttons/RemoveBtn/RemoveBtn.scss
+++ b/frontend/src/components/UI/Buttons/RemoveBtn/RemoveBtn.scss
@@ -2,7 +2,7 @@
   display: inline-block;
   background: none;
   border: none;
-  font-size: 25px;
+  @include adaptivFont(25,20);
   color: $rootStyleTypeColor;
   transition: scale 0.5s ease;
   &:active,
