--- a/frontend/src/components/UI/Quantity/Quantity.scss
+++ b/frontend/src/components/UI/Quantity/Quantity.scss
@@ -3,14 +3,14 @@
   
   &-title {
     font-family: $main-font-regular;
-    font-size: 20px;
+    @include adaptivFont(20,16);
     color: $rootStyleTypeColor;
   }
 
   & > p {
       font-family: $main-font-medium;
       color: $rootStyleTypeColor;
-      font-size: 16px;
+      @include adaptivFont(25,20);
     }
 
   &-btn {
@@ -40,14 +40,6 @@
     &:focus,
     &:active {
       outline: none;
-    }
-  }
-}
-
-@media screen and(max-width: $breakpoint-md) {
-  .Quantity {
-    &-title {
-      font-size: 16px;
     }
   }
 }
