--- a/frontend/src/components/pages/Contact/Contact.scss
+++ b/frontend/src/components/pages/Contact/Contact.scss
@@ -1,21 +1,82 @@
 .Contact {
-  min-height: 100vh;
+  position: relative;
   background: $rootStyleTypeBg;
+  &-box {
+    margin-top: 50px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
+    &-info {
+      padding: 0 10px;
+      & > h2 {
+        font-family: $main-font-medium-italic;
+        @include adaptivFont(30, 16);
+      }
+      &-list {
+        margin: 10px;
+        list-style: none;
+        @include flex(center, space-between);
+        flex-wrap: wrap;
+        & > li {
+          padding: 10px 0;
+          flex: 1;
+          margin: 0 10px;
+          @include flex(center, center);
+          font-family: $main-font-medium;
+          @include adaptivFont(18, 12);
+          letter-spacing: 1px;
+          color: $rootStyleTypeColor;
+          & > a {
+            white-space: nowrap;
+            margin-left: 5px;
+          }
+          & > svg {
+            @include adaptivFont(16, 10);
+          }
+        }
+      }
+      &-or {
+        @include flex(center, center);
+        & > p {
+          font-family: $main-font-light-italic;
+          @include adaptivFont(20, 14);
+          letter-spacing: 3px;
+          padding: 10px;
+        }
+        &-line {
+          width: 100%;
+          height: 2px;
+          background: $main-color;
+          &.left {
+            border-bottom-left-radius: 100%;
+            border-top-left-radius: 100%;
+          }
+          &.right {
+            border-bottom-right-radius: 100%;
+            border-top-right-radius: 100%;
+          }
+        }
+      }
+      
+    }
+    
+    &-image {
+      padding: 10px;
+      position: relative;
+      @include flex(center, center);
 
-  & > .container {
-    padding-top: 140px;
-    @include flex(center, center);
-    flex-direction: column;
-  }
-  &-title {
-    margin-top:50px;
-    text-align: center;
-    & > h2 {
-      max-width: 700px;
-      text-transform: uppercase;
-      color: $rootStyleTypeColor;
-      font-family: $main-font-regular;
-      font-size: 50px;
+      &-frame {
+        position: absolute;
+        width: 400px;
+        height: 400px;
+        border: 1px solid $main-color;
+        transform: rotate(-15deg);
+      }
+      & > img {
+        max-height:400px;
+        max-width: 400px;
+      }
     }
   }
 }
+
+@import './ContactForm/ContactForm.scss';
