--- a/frontend/src/components/pages/Contact/Contact.scss
+++ b/frontend/src/components/pages/Contact/Contact.scss
@@ -1,47 +1,54 @@
 .Contact {
   position: relative;
   background: $rootStyleTypeBg;
+  & > .container {
+    padding-top: 100px;
+    margin-bottom: 100px;
+  }
   &-box {
     margin-top: 50px;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
+    padding: 0 20px;
+    @include flex(center, center);
+    
     &-info {
-      padding: 0 10px;
+      flex: 1;
+      @include flex(center, center);
+      flex-direction: column;
+      text-align: center;
+
       & > h2 {
         font-family: $main-font-medium-italic;
         @include adaptivFont(30, 16);
       }
       &-list {
         margin: 10px;
-        list-style: none;
         @include flex(center, space-between);
         flex-wrap: wrap;
         & > li {
-          padding: 10px 0;
+          padding: 10px;
           flex: 1;
-          margin: 0 10px;
           @include flex(center, center);
           font-family: $main-font-medium;
-          @include adaptivFont(18, 12);
+          @include adaptivFont(16, 14);
           letter-spacing: 1px;
           color: $rootStyleTypeColor;
           & > a {
             white-space: nowrap;
             margin-left: 5px;
           }
-          & > svg {
-            @include adaptivFont(16, 10);
-          }
         }
       }
       &-or {
+        width: 100%;
         @include flex(center, center);
+
         & > p {
           font-family: $main-font-light-italic;
           @include adaptivFont(20, 14);
           letter-spacing: 3px;
           padding: 10px;
         }
+
         &-line {
           width: 100%;
           height: 2px;
@@ -60,6 +67,10 @@
     }
     
     &-image {
+      flex: 1;
+      height: 100%;
+      align-self: center;
+      justify-self: center;
       padding: 10px;
       position: relative;
       @include flex(center, center);
@@ -74,6 +85,43 @@
       & > img {
         max-height:400px;
         max-width: 400px;
+      }
+    }
+  }
+}
+
+@media screen and(max-width: $breakpoint-lg) {
+  .Contact {
+    &-box {
+      &-image {
+        margin-top: 100px;
+        &-frame {
+          width: 300px;
+          height: 300px
+        }
+        & > img {
+          max-height:300px;
+          max-width: 300px;
+        }
+      }
+    }
+  }
+}
+
+@media screen and(max-width: $breakpoint-sm) {
+  .Contact {
+    &-box {
+      flex-direction: column;
+      &-image {
+        margin-top: 100px;
+        &-frame {
+          width: 200px;
+          height: 200px
+        }
+        & > img {
+          max-height:200px;
+          max-width: 200px;
+        }
       }
     }
   }
