--- a/frontend/src/components/pages/ProductScreen/ProductScreen.scss
+++ b/frontend/src/components/pages/ProductScreen/ProductScreen.scss
@@ -1,7 +1,7 @@
 .ProductScreen {
   width: 100%;
   min-height: 90vh;
-  background: $rootStyleTypeBg;
+  background: red;
   & > .container {
     padding-top: 100px;
     padding-bottom: 50px;
